--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -1,5 +1,7 @@
 name: Swag Labs Automation Regression Suite
 on:
+  push:
+    branches: [ main ]
   schedule:
     - cron: "0 0 * * *"
 
@@ -22,9 +24,16 @@ jobs:
 
       - name: Install dependencies
         run: |
-          .venv/bin/python -m pip install --upgrade pip
-          .venv/bin/pip install -r requirements.txt
+          source .venv/bin/activate
+          pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Playwright install browsers
+        run: |
+          source .venv/bin/activate
+          playwright install
 
       - name: Run tests (pytest)
         run: |
-          .venv/bin/pytest -v -s
+          source .venv/bin/activate
+          pytest -v -s
