--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -28,6 +28,21 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Ruff (lint)
+        run: |
+          source .venv/bin/activate
+          ruff check . --fix
+
+      - name: Black (format check)
+        run: |
+          source .venv/bin/activate
+          black --check .
+
+      - name: mypy (type check)
+        run: |
+          source .venv/bin/activate
+          mypy .     
+
       - name: Playwright install browsers
         run: |
           source .venv/bin/activate
