--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,29 @@
+black==26.1.0
 certifi==2026.1.4
+cfgv==3.5.0
 charset-normalizer==3.4.4
+click==8.3.1
+distlib==0.4.0
+filelock==3.21.2
 gherkin-official==29.0.0
 greenlet==3.3.1
+identify==2.6.16
 idna==3.11
 iniconfig==2.3.0
+librt==0.8.0
 Mako==1.3.10
 MarkupSafe==3.0.3
+mypy==1.19.1
+mypy_extensions==1.1.0
+nodeenv==1.10.0
 packaging==26.0
 parse==1.21.0
 parse_type==0.6.6
+pathspec==1.0.4
+platformdirs==4.7.0
 playwright==1.58.0
 pluggy==1.6.0
+pre_commit==4.5.1
 pyee==13.0.0
 Pygments==2.19.2
 pytest==9.0.2
@@ -18,8 +31,12 @@ pytest-base-url==2.1.0
 pytest-bdd==8.1.0
 pytest-playwright==0.7.2
 python-slugify==8.0.4
+pytokens==0.4.1
+PyYAML==6.0.3
 requests==2.32.5
+ruff==0.15.1
 six==1.17.0
 text-unidecode==1.3
 typing_extensions==4.15.0
 urllib3==2.6.3
+virtualenv==20.36.1
